<?xml version="1.0"?>
<package format="2">
  <name>wcq_lib</name>
  <version>0.0.0</version>
  <description>wcq lib</description>

  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
